--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Homepage</h1>
     <a href="http://www.theodinproject.com/about">clickme</a>
-    <a href="about/about.html">about me</a>
+    <a href="about/about.html">about all</a>
     <img src="images/dog.jpg.jpg"alt="dog.jpg.jpg">
 </body>
 </html>
