--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,6 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    welcome about pages
+   <h1>Odin Recipes</h1> 
+   <a href="recipes/mintchicken.html">Recipe for cooking mint chicken</a>
 </body>
 </html>
